Bug 97309 - Fix build with ENABLE_WEBGL=false
Summary: Fix build with ENABLE_WEBGL=false
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Layout and Rendering (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P2 Normal
Assignee: Andrey Adaikin
URL:
Keywords:
Depends on: 93869
Blocks:
  Show dependency treegraph
 
Reported: 2012-09-21 01:52 PDT by Andrey Adaikin
Modified: 2012-09-21 09:41 PDT (History)
6 users (show)

See Also:


Attachments
Patch (1.41 KB, patch)
2012-09-21 01:54 PDT, Andrey Adaikin
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey Adaikin 2012-09-21 01:52:55 PDT
WebKit no longer builds when WEBGL is not enabled.
Patch to follow.
Comment 1 Andrey Adaikin 2012-09-21 01:54:01 PDT
Created attachment 165080 [details]
Patch
Comment 2 Max Vujovic 2012-09-21 08:33:19 PDT
Thanks for the fix. Informally, LGTM.
Comment 3 Eric Seidel (no email) 2012-09-21 09:37:11 PDT
Comment on attachment 165080 [details]
Patch

OK.
Comment 4 WebKit Review Bot 2012-09-21 09:41:32 PDT
Comment on attachment 165080 [details]
Patch

Clearing flags on attachment: 165080

Committed r129236: <http://trac.webkit.org/changeset/129236>
Comment 5 WebKit Review Bot 2012-09-21 09:41:36 PDT
All reviewed patches have been landed.  Closing bug.