Fix build with ENABLE_WEBGL=false https://bugs.webkit.org/show_bug.cgi?id=97309

Patch by Andrey Adaikin <aandrey@chromium.org> on 2012-09-21
Reviewed by Eric Seidel.

WebKit no longer builds when WEBGL is not enabled.

* rendering/FilterEffectRenderer.h:
(FilterEffectRenderer):

Canonical link: https://commits.webkit.org/115282@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129236 268f45cc-cd09-0410-ab3c-d52691b4dbfc